--- a/frontend-landing/index.html
+++ b/frontend-landing/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Meta Tags -->
+    <title>Lukasz_Dev | Full-Stack Developer Portfolio - Fintech, AI/RAG & Microservices</title>
+    <meta name="description" content="Full-Stack Developer portfolio showcasing expertise in fintech systems, AI/RAG solutions, and scalable microservices architecture. Explore production-grade projects and technical capabilities." />
+    <meta name="keywords" content="Full-Stack Developer, Fintech, AI/RAG, Microservices, Software Engineer, Web Development, Backend, Frontend" />
+    <meta name="author" content="Lukasz_Dev" />
+    <link rel="canonical" href="/" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Lukasz_Dev | Full-Stack Developer Portfolio - Fintech, AI/RAG & Microservices" />
+    <meta property="og:description" content="Full-Stack Developer portfolio showcasing expertise in fintech systems, AI/RAG solutions, and scalable microservices architecture. Explore production-grade projects and technical capabilities." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="/" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lukasz_Dev | Full-Stack Developer Portfolio" />
+    <meta name="twitter:description" content="Full-Stack Developer showcasing fintech, AI/RAG, and microservices expertise. Explore production-grade projects and technical capabilities." />
+
+    <!-- Font Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Lukasz_Dev | Portfolio 2025</title>
   </head>
   <body>
     <div id="root"></div>
